Made embedded youtube videos and blog header img responsive

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 </head>
 <body>
 
-    <nav class="menu">
+    <!-- <nav class="menu">
         <ul class="nav-menu">
           <li><a href="#">Fantastic Squad Daycare</a></li>
           <li><a href="#">Designing Responsive Environments</a></li>
           <li><a href="#">Fantastic Curriculum</a></li>
           <li><a href="#">Celebrate Outdoor Play</a></li>
         </ul>
-    </nav>
+    </nav> -->
     
     <!-- <header>
         <h1>Fantastic Squad Playroom</h1>
@@ -39,10 +39,10 @@
             <h2>Designing Responsive Environments</h2>
             <figure class="fantastic-playroom">
                 <img src="./assets/images/daycare-playroom-hero.jpg" alt="Fantastic Squad Daycare Play Area" title="Fantastic Squad Daycare Play Area">
-                <figcaption>Our Fantastic Playroom!</figcaption>
+                <!-- <figcaption>Our Fantastic Playroom!</figcaption> -->
             </figure>
-            <address>Daniela Marin (July 12, 2022)</address>
-            <p>Our Fantastic Squad Playroom educators’ team takes pride in designing amazing responsive environments for the children in our care. This process takes place weekly when the environment is assessed to ensure that meets the ever-changing children developmental and caring needs, challenges their curiosity, competencies and thinking, reflects our values, beliefs and children’s identities, and offers responsive and authentic learning experiences and opportunities.</p>
+            <address>By Daniela Marin <!-- July 12th, 2022 --></address>
+            <p>Our Fantastic Squad Playroom educators’ team takes pride in designing amazing responsive environments for the children in our care. This process takes place weekly when the environment is assessed to ensure that it meets the ever-changing developmental and caring needs of the children, challenges their curiosity, competencies and thinking, reflects our values, beliefs and children’s identities, and offers responsive and authentic learning experiences and opportunities.</p>
             <p>This process is complex, yet gratifying, and cannot be done in solitude. We need you! You, as a parent, are a vital partner in creating responsive environments that support your children’s learning, reflect their image, and help them <span class="bold-paragraph">thrive and build a long-lasting love for learning.</span></p>
             <h3>Why a responsive environment?</h3>
             <p>Alberta Flight Framework underlines this aspect very well by stating that “the environments in which children live, play, and relate can open up or limit opportunities for their care, play, and learning” and that the child is a social learner who co-construct knowledge in relationship with the environment and other learners, both adults and children (Makovichuk et al., 2014, p.64).</p>
@@ -61,9 +61,9 @@
         </section>
     </main>
 
-    <footer>
+    <!-- <footer>
         <h6>&copy Eight Miscellaneous</h6>
-        <!-- <h6>&copy IceMonkey Media</h6> -->
-    </footer>
+        <h6>&copy IceMonkey Media</h6>
+    </footer> -->
 </body>
 </html>
