--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 </head>
 <body>
 
-    <!-- <nav class="menu">
+    <nav class="menu">
         <ul class="nav-menu">
-          <li><a href="#">Fantastic Squad Daycare</a></li>
-          <li><a href="#">Designing Responsive Environments</a></li>
-          <li><a href="#">Fantastic Curriculum</a></li>
-          <li><a href="#">Celebrate Outdoor Play</a></li>
+          <li><a href="./index.html">Fantastic Squad Daycare</a></li>
+          <li><a href="./design.html">Design</a></li>
+          <li><a href="#">Curriculum</a></li>
+          <li><a href="#">Outdoor</a></li>
         </ul>
-    </nav> -->
+    </nav>
     
     <!-- <header>
         <h1>Fantastic Squad Playroom</h1>
