Improved navbar, added responsiveness using flex and media queries

--- a/design.html
+++ b/design.html
@@ -17,13 +17,11 @@
 </head>
 <body>
 
-    <nav class="menu">
-        <ul class="nav-menu">
-          <li><a href="./index.html">Fantastic Squad Daycare</a></li>
-          <li><a href="./design.html">Design</a></li>
-          <li><a href="#">Curriculum</a></li>
-          <li><a href="#">Outdoor</a></li>
-        </ul>
+    <nav>
+        <a href="./index.html" id="home">Fantastic Squad Playroom</a>
+        <a href="./design.html">Design</a>
+        <a href="#">Curriculum</a>
+        <a href="#">Outdoor</a>
     </nav>
     
     <!-- <header>
