--- a/index.html
+++ b/index.html
@@ -17,14 +17,21 @@
 </head>
 <body>
 
-    <nav class="menu">
+    <nav>
+        <a href="./index.html" id="home">Fantastic Squad Playroom</a>
+        <a href="./design.html">Design</a>
+        <a href="#">Curriculum</a>
+        <a href="#">Outdoor</a>
+    </nav>
+
+    <!-- <nav class="menu">
         <ul class="nav-menu">
           <li><a href="./index.html">Fantastic Squad Daycare</a></li>
           <li><a href="./design.html">Design</a></li>
           <li><a href="#">Curriculum</a></li>
           <li><a href="#">Outdoor</a></li>
         </ul>
-    </nav>
+    </nav> -->
     
     <!-- <header>
         <h1>Fantastic Squad Playroom</h1>
