Added markup and content for curriculum and outdoor pages

--- a/design.html
+++ b/design.html
@@ -20,8 +20,8 @@
     <nav>
         <a href="./index.html" id="home">Fantastic Squad Playroom</a>
         <a href="./design.html">Design</a>
-        <a href="#">Curriculum</a>
-        <a href="#">Outdoor</a>
+        <a href="./curriculum.html">Curriculum</a>
+        <a href="./outdoor.html">Outdoor</a>
     </nav>
     
     <!-- <header>
@@ -59,9 +59,9 @@
         </section>
     </main>
 
-    <!-- <footer>
-        <h6>&copy Eight Miscellaneous</h6>
-        <h6>&copy IceMonkey Media</h6>
-    </footer> -->
+    <footer>
+        <h6>Content created by <a href="https://bowvalleycollege.ca/programs-courses/community-studies/early-childhood-education-and-development-diploma" id="bow-valley-link" title="Bow Valley College Early Childhood Education and Development">Bow Valley College Early Childhood Education and Development Students</a></h6>
+        <h6>Website Developed By <a href="https://github.com/portfoliodemo" title="PortfolioDemo GitHub">PortfolioDemo</a> </h6>
+    </footer>
 </body>
 </html>
