Updated post preview care 'Continue Reading' links

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 </figure>
                 <address>By Ashmeen Kaur July 9th, 2022</address>
                 <p>We have often heard and might have also invariably used the phrase <span class="bold-paragraph">‘every child is unique’</span> when referring to our children’s learning and development.
-                <span class="read-more">Continue Reading..</span></a></p>
+                <a href="./curriculum.html" title="Read more about Fantastic Curriculum."><span class="read-more">Continue Reading..</span></a></p>
             </article>
 
             <!-- Outdoor Play -->
@@ -90,13 +90,13 @@
                     <h2>Celebrate Outdoor Play</h2>
                 </a>
                 <figure class="thumbnail-preview">
-                    <a href="./design.html" title="Celebrate Outdoor Play">
+                    <a href="./outdoor.html" title="Celebrate Outdoor Play">
                     <img src="./assets/images/outdoor-play-stick.jpg" alt="Curious child picks up a stick in a forest." title="Curious child picks up a stick in a forest.">
                     </a>
                 </figure>
                 <address>Alexis Jenkinson July 18, 2022</address>
                 <p>At the Fantastic Squad Playroom, we thrive when being outdoors. The educators and parents all have significant roles when it comes to our outdoor play portion.
-                <span class="read-more">Continue Reading..</span></a></p>
+                    <a href="./outdoor.html" title="Celebrate Outdoor Play!"><span class="read-more">Continue Reading..</span></a></p>
             </article>
         </div>
     
