Updated blog author(s) address tag

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     </a>
                 </figure>
                 <address>By Daniela Marin July 12th, 2022</address>
-                <p>Our Fantastic Squad Playroom educators’ team takes pride in designing amazing responsive environments for the children in our care. This process takes place weekly when the environment is assessed.. <a href="./design.html" title="Read more about designing responsive environments."><span class="read-more">Continue Reading..</span></a></p>
+                <p>Our Fantastic Squad Playroom educators’ team takes pride in designing amazing responsive environments for the children in our care. <a href="./design.html" title="Read more about designing responsive environments."><span class="read-more">Continue Reading..</span></a></p>
             </article>
 
             <!-- Curriculum for Fantastic Squad Playroom -->
@@ -94,7 +94,7 @@
                     <img src="./assets/images/outdoor-play-stick.jpg" alt="Curious child picks up a stick in a forest." title="Curious child picks up a stick in a forest.">
                     </a>
                 </figure>
-                <address>Alexis Jenkinson July 18, 2022</address>
+                <address>By Alexis Jenkinson July 18, 2022</address>
                 <p>At the Fantastic Squad Playroom, we thrive when being outdoors. The educators and parents all have significant roles when it comes to our outdoor play portion.
                     <a href="./outdoor.html" title="Celebrate Outdoor Play!"><span class="read-more">Continue Reading..</span></a></p>
             </article>
