Updated post preview card links

--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
 
             <!-- Curriculum for Fantastic Squad Playroom -->
             <article class="preview">
-                <a href="./design.html" title="Designing Responsive Environments">
+                <a href="./curriculum.html" title="Designing Responsive Environments">
                     <h2>Curriculum for Fantastic Squad Playroom</h2>
                 </a>
                 <figure class="thumbnail-preview">
-                    <a href="./design.html" title="Designing Responsive Environments">
+                    <a href="./curriculum.html" title="Designing Responsive Environments">
                     <img src="./assets/images/curriculum-ece.jpg" alt="Fantastic Squad Curriculum" title="Fantastic Squad Daycare Play Area">
                     </a>
                 </figure>
