Created new class for and reduced img size of hero img on curriculum page

--- a/curriculum.html
+++ b/curriculum.html
@@ -35,7 +35,7 @@
     <main>
         <section>
             <h2>Curriculum for Fantastic Squad Playroom</h2>
-            <figure class="fantastic-playroom">
+            <figure class="ece-curriculum">
                 <img src="./assets/images/curriculum-ece.jpg" alt="Fantastic Squad Curriculum" title="Fantastic Squad Daycare Play Area">
                 <!-- <figcaption>Our Fantastic Playroom!</figcaption> -->
             </figure>
