Updated preview and blog posts date content

--- a/outdoor.html
+++ b/outdoor.html
@@ -39,7 +39,7 @@
                 <img src="./assets/images/outdoor-play-stick.jpg" alt="Curious child picks up a stick in a forest." title="Curious child picks up a stick in a forest.">
                 <!-- <figcaption>Our Fantastic Playroom!</figcaption> -->
             </figure>
-            <address>By Alexis Jenkinson July 18, 2022</address>
+            <address>By Alexis Jenkinson (July 18, 2022)</address>
             <p>At the Fantastic Squad Playroom, we thrive when being outdoors. The educators and parents all have significant roles when it comes to our outdoor play portion. As most of our emergent curriculum is taken outside this gives the children a chance to take risks, make new games and become socially and emotionally in tune with nature and our surroundings. Let’s have a look at all the good things being outdoors can offer.</p>
             <!-- <iframe width="853" height="480" src="https://www.youtube.com/embed/Os0fJhHHHiA" title="Why children need to play in nature" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
             <div class="youtube"><iframe width="853" height="480" src="https://www.youtube.com/embed/Os0fJhHHHiA" title="Why children need to play in nature" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
