Created and styled the references section on the curriculum page

--- a/curriculum.html
+++ b/curriculum.html
@@ -53,16 +53,37 @@
                 <li><span class="bold-paragraph">Understanding children's preferred learning style</span> as Howard Gardner’s theory of multiple intelligence shows that “there are at least eight types of intelligence”, and one might have a preferred and unique learning style where one “can excel in one type of style while having challenges in another area” (p. 40). Watch the video to learn more about eight types of intelligences. We include the child’s preferred learning style in our planning while also giving them the opportunity to learn through all forms of intelligences because “children have the potential to develop in all of them” (p.43).<div class="youtube"><iframe width="664" height="374" src="https://www.youtube.com/embed/A7HFA4NUWQg" title="Every Child is Intelligent. What are Multiple Intelligences?" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 </li>
                 <li><span class="bold-paragraph">Learning from families:</span> “Families know their children in ways that no one else can” and we always look forward to learn from you about your family values and culture to understand how your child “makes meaning of the world” around them and their dispositions to learning (flight,.. , p.24). We are working towards a common goal of supporting the holistic development of our children.</li>
-                <li><span class="bold-paragraph">Connecting with Alberta’s new kindergarten to grade 6 curricula</span> key learning themes helps us to understand and cater to the specific needs of the school-age children and support their learning. For a broad overview of these themes and their expected general outcomes watch the following video.</li>
+                <li><span class="bold-paragraph">Connecting with Alberta’s new kindergarten to grade 6 curricula</span> key learning themes helps us to understand and cater to the specific needs of the school-age children and support their learning. For a broad overview of these themes and their expected general outcomes watch the following video or go to the government of Alberta's <a href="https://www.alberta.ca/curriculum-key-themes.aspx">website.</a></li>
                 <li class="no-list-style"><div class="youtube"><iframe width="664" height="374" src="https://www.youtube.com/embed/SO-1BwpAkO0" title="Alberta’s K-6 curriculum" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
             </ul>
-            <p>Emergent curriculum promotes children’s curiosity across all developmental domains as “children’s active engagement and participation in learning is demonstrated through their theory building, creativity, problem solving, playfulness, and imagination” (flight framework, p. 22). This is achieved through emergent web. <!-- // Insert Picture of webbing -->Now you know why it is called webbing. You will see this kind of webbing on our display board. Kindly have a look through it and share your valuable inputs that can be incorporated into our planning.</p>
+            <p>Emergent curriculum promotes children’s curiosity across all developmental domains as “children’s active engagement and participation in learning is demonstrated through their theory building, creativity, problem solving, playfulness, and imagination” (Makovichuk et. al., 2014, p.22). This is achieved through emergent web planning as shown in the following image.
+            <figure class="fantastic-playroom">
+                <img src="./assets/images/webbing.png" alt="Web Planning/Brainstorming" title="Web Planning">
+                <!-- <figcaption>Adventure/Loose Parts Playground</figcaption> -->
+            </figure> 
+            Now you know why it is called webbing. You will see this kind of webbing on our display board. Kindly have a look through it and share your valuable inputs that can be incorporated into our planning.</p>
         </section>
+
+        <div class="references">
+            <h2>References</h2>
+            <p>Bisback, K., & Kopf-Johnson, L. (2010). <span class="italicize">An introduction to school-age care in Canada</span> (2nd ed.). Pearson Canada.</p>
+            <p>Government of Alberta. (2022). <span class="italicize">K-6 curriculum renewal: Key themes</span>. Government of Alberta.</p>
+            <p><a href="https://www.alberta.ca/curriculum-key-themes.aspx" title="K-6 Curriculum Renewal: Key Themes">https://www.alberta.ca/curriculum-key-themes.aspx</a></p>
+            <p>Makovichuk, L., Hewes, J., Lirette, P., & Thomas, N. (2014). Flight: Alberta’s Early Learning and Care Framework.</p>
+            <p><a href="https://flightframework.ca/downloads/Flight%20Framework%20Document%20F.pdf" title="Flight Framework Document">https://flightframework.ca/downloads/Flight%20Framework%20Document%20F.pdf</a></p>
+            <p>Naeyc. (2022). <span class="italicize">Quick and easy notes: Practical strategies for busy teachers</span> [Image]. Naeyc.</p>
+            <p><a href="https://www.naeyc.org/resources/pubs/tyc/oct2019/practical-strategies-teachers">https://www.naeyc.org/resources/pubs/tyc/oct2019/practical-strategies-teachers</a></p>
+            <p>Quantus Learning. (2017, August 21). Every child is intelligent: What are multiple intelligences?</p>
+            <p>[Video]. YouTube. <a href="https://www.youtube.com/watch?v=A7HFA4NUWQg ">https://www.youtube.com/watch?v=A7HFA4NUWQg </a></p>
+            <p>Your Alberta. (2021, March 31). <span class="italicize">Alberta’s K-6 Curriculum</span> [Video]. YouTube.</p>
+            <p><a href="https://youtu.be/SO-1BwpAkO0">https://youtu.be/SO-1BwpAkO0</a></p>
+        </div>
     </main>
 
     <footer>
-        <h6>Content created by <a href="https://bowvalleycollege.ca/programs-courses/community-studies/early-childhood-education-and-development-diploma" id="bow-valley-link" title="Bow Valley College Early Childhood Education and Development">Bow Valley College Early Childhood Education and Development Students</a></h6>
+        <h6>Content created by <a href="https://bowvalleycollege.ca/programs-courses/community-studies/early-childhood-education-and-development-diploma" id="bow-valley-link" title="Bow Valley College Early Childhood Education and Development">Bow Valley College ECED Students</a></h6>
         <h6>Website Developed By <a href="https://github.com/portfoliodemo" title="PortfolioDemo GitHub">PortfolioDemo</a> </h6>
     </footer>
+
 </body>
 </html>
