--- a/outdoor.html
+++ b/outdoor.html
@@ -64,8 +64,9 @@
     </main>
 
     <footer>
-        <h6>Content created by <a href="https://bowvalleycollege.ca/programs-courses/community-studies/early-childhood-education-and-development-diploma" id="bow-valley-link" title="Bow Valley College Early Childhood Education and Development">Bow Valley College Early Childhood Education and Development Students</a></h6>
+        <h6>Content created by <a href="https://bowvalleycollege.ca/programs-courses/community-studies/early-childhood-education-and-development-diploma" id="bow-valley-link" title="Bow Valley College Early Childhood Education and Development">Bow Valley College ECED Students</a></h6>
         <h6>Website Developed By <a href="https://github.com/portfoliodemo" title="PortfolioDemo GitHub">PortfolioDemo</a> </h6>
     </footer>
+    
 </body>
 </html>
