Created, styled and completed references section, added contact info to index.html

--- a/curriculum.html
+++ b/curriculum.html
@@ -45,10 +45,10 @@
             <p>At Fantastic Squad playroom, we use the <span class="bold-paragraph">EMERGENT CURRICULUM</span> that supports each child’s specific developmental and learning needs. It is a child-directed and inquiry-based approach that focuses on continually incorporating the evolving needs of school-age children to plan a responsive environment with effective playful learning experiences. Let’s look at the factors that we consider planning the curriculum to cater to the specific requirements of our children.</p>
             <ul>
                 <li><span class="bold-paragraph">Observing children’s needs, abilities, and interests,</span> we learn about their developed and emerging skills across all developmental domains. That is why you will see us that will guide our future planning. 
-                <!-- <figure>
+                <figure class="teacher-student">
                     <img src="./assets/images/student-teacher.png" alt="A student and teacher sharing a smile.">
                     <figcaption>Ms. A is seen interacting with the children while also making observational notes. (NAEYC,2022)</figcaption>
-                </figure> -->
+                </figure>
                 </li>
                 <li><span class="bold-paragraph">Understanding children's preferred learning style</span> as Howard Gardner’s theory of multiple intelligence shows that “there are at least eight types of intelligence”, and one might have a preferred and unique learning style where one “can excel in one type of style while having challenges in another area” (p. 40). Watch the video to learn more about eight types of intelligences. We include the child’s preferred learning style in our planning while also giving them the opportunity to learn through all forms of intelligences because “children have the potential to develop in all of them” (p.43).<div class="youtube"><iframe width="664" height="374" src="https://www.youtube.com/embed/A7HFA4NUWQg" title="Every Child is Intelligent. What are Multiple Intelligences?" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
                 </li>
@@ -67,6 +67,7 @@
         <div class="references">
             <h2>References</h2>
             <p>Bisback, K., & Kopf-Johnson, L. (2010). <span class="italicize">An introduction to school-age care in Canada</span> (2nd ed.). Pearson Canada.</p>
+            <p>Element5 Digital. (2017, August 5). No Description [image] <a href="https://unsplash.com/photos/OyCl7Y4y0Bk">https://unsplash.com/photos/OyCl7Y4y0Bk</a></p>
             <p>Government of Alberta. (2022). <span class="italicize">K-6 curriculum renewal: Key themes</span>. Government of Alberta.</p>
             <p><a href="https://www.alberta.ca/curriculum-key-themes.aspx" title="K-6 Curriculum Renewal: Key Themes">https://www.alberta.ca/curriculum-key-themes.aspx</a></p>
             <p>Makovichuk, L., Hewes, J., Lirette, P., & Thomas, N. (2014). Flight: Alberta’s Early Learning and Care Framework.</p>
