--- a/design.html
+++ b/design.html
@@ -56,6 +56,19 @@
                 <li>Responsive playroom spaces that support children’s needs for solitary or group play, spend time alone or with friends and educators, pursue interest and curiosities. The following video offers a great perspective in this matter: </li>
                 <li class="no-list-style"><div class="youtube"><iframe width="664" height="374" src="https://www.youtube.com/embed/4cscJcRKYxA" title="Flexible Classrooms: Providing the Learning Environment That Kids Need" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
             </ul>
+            <p>Now we can all agree that a responsive environment is as good as "The Good Little Book" <a href="https://www.youtube.com/watch?v=RLc6F2CQfZ8&t=209s" title="The Good Little Book | Youtube">Read Aloud with Calgary Reads - Christine Lindberg reads 'The Good Little Book' by Kyo Maclear</a></p>
+            <div class="youtube"><iframe width="853" height="480" src="https://www.youtube.com/embed/RLc6F2CQfZ8" title="Read Aloud with Calgary Reads - Christine Lindberg reads 'The Good Little Book' by Kyo Maclear" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+
+            <div class="references">
+                <h2>References</h2>
+                <p>Arora, G. (2019, September 5). Toddler's den [image]. <a href="https://unsplash.com/s/photos/toddler's-den%2C-ahmedabad%2C-india">https://unsplash.com/s/photos/toddler's-den%2C-ahmedabad%2C-india</a></p>
+                <p>Calgary Reads. (2018, October 24). <span class="italicize">Read aloud with Calgary Reads - Christine Lindberg reads 'The Good Little Book' by Kyo Maclear</span> [Video]. Youtube. <a href="https://www.youtube.com/watch?v=RLc6F2CQfZ8&t=209s">Read Aloud with Calgary Reads - Christine Lindberg reads 'The Good Little Book' by Kyo Maclear.</a></p>
+                <p>Edutopia. (2022, January 27). <span class="italicize">Using open-ended materials to spark curiosity</span> [Video]. Youtube Using Open-Ended Materials to Spark Curiosity. <a href="https://www.youtube.com/watch?v=4MQkbUKUjFI&t=10s">Using Open-Ended Materials to Spark Curiosity.</a></p>
+                <p>Edutopia. (2015, August 3). <span class="italicize">Flexible classrooms: Providing the learning environment that kids need</span> [Video]. Youtube <a href="https://www.youtube.com/watch?v=4cscJcRKYxA">Flexible Classrooms: Providing the Learning Environment That Kids Need.</a></p>
+                <p>Kaplan. (n.d.). <span class="italicize">Increasing flexibility in your daily classroom routine</span>. <a href="https://www.kaplanco.com/ii/increasing-flexibility-in-classroom-routines">https://www.kaplanco.com/ii/increasing-flexibility-in-classroom-routines</a></p>
+                <p>Makovichuk, L., Hewes, J., Lirette P., & Thomas, N. (2014). <span class="italicize">Flight: Alberta’s early learning and care framework</span>. <a href="https://flightframework.ca">https://flightframework.ca</a></p>
+                <p>ONgov. (2014, December 23). <span class="italicize">Early years learning environments - A new perspective on creating engaging spaces for children</span> [Video]. Youtube. <a href="https://www.youtube.com/watch?v=MTNP5LXQaQ0&t=5s">Early Years Learning Environments - A New Perspective on Creating Engaging Spaces for Children.</a></p>
+            </div>
         </section>
     </main>
 
@@ -63,6 +76,6 @@
         <h6>Content created by <a href="https://bowvalleycollege.ca/programs-courses/community-studies/early-childhood-education-and-development-diploma" id="bow-valley-link" title="Bow Valley College Early Childhood Education and Development">Bow Valley College ECED Students</a></h6>
         <h6>Website Developed By <a href="https://github.com/portfoliodemo" title="PortfolioDemo GitHub">PortfolioDemo</a> </h6>
     </footer>
-    
+
 </body>
 </html>
