--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
             </figure>
 
             <figure id="giraffe">
+                <!-- Photo courtesy of Paige Cody on Unsplash: https://unsplash.com/photos/nLdDrH53BkA -->
                 <img src="./assets/images/giraffe.jpg" alt="A toy giraffe." title="A toy giraffe.">
             </figure>    
         </div>
@@ -98,6 +99,13 @@
                 <p>At the Fantastic Squad Playroom, we thrive when being outdoors. The educators and parents all have significant roles when it comes to our outdoor play portion.
                     <a href="./outdoor.html" title="Celebrate Outdoor Play!"><span class="read-more">Continue Reading..</span></a></p>
             </article>
+        </div>
+
+        <div class="company-info">
+            <p>Address: ABC Childcare Centre, 123 Beauty Road, Calgary Alberta</p>
+            <p>Email: fantasticsquad@abcchildcare.ca</p>
+            <p>Phone Number: (123) 456-7890</p>
+            <p>Socials: <a href="https://www.facebook.com">Facebook</a> | <a href="https://www.instagram.com">Instagram</a></p>
         </div>
     
         <footer>
