--- a/curriculum.html
+++ b/curriculum.html
@@ -56,12 +56,12 @@
                 <li><span class="bold-paragraph">Connecting with Alberta’s new kindergarten to grade 6 curricula key learning themes</span> helps us to understand and cater to the specific needs of the school-age children and support their learning. For a broad overview of these themes and their expected general outcomes watch the following video or to learn more go to the government of Alberta's <a href="https://www.alberta.ca/curriculum-key-themes.aspx">website.</a></li>
                 <li class="no-list-style"><div class="youtube"><iframe width="664" height="374" src="https://www.youtube.com/embed/SO-1BwpAkO0" title="Alberta’s K-6 curriculum" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div></li>
             </ul>
-            <p>Emergent curriculum promotes children’s curiosity across all developmental domains as “children’s active engagement and participation in learning is demonstrated through their theory building, creativity, problem solving, playfulness, and imagination” (Makovichuk et. al., 2014, p.22). This is achieved through emergent web planning as shown in the following image.
+            <p>Emergent curriculum promotes children’s curiosity across all developmental domains as “children’s active engagement and participation in learning is demonstrated through their theory building, creativity, problem solving, playfulness, and imagination” (Makovichuk et. al., 2014, p.22). This is achieved through emergent web planning as shown in the following image.</p>
             <figure class="fantastic-playroom">
                 <img src="./assets/images/webbing.png" alt="Web Planning/Brainstorming" title="Web Planning">
                 <!-- <figcaption>Adventure/Loose Parts Playground</figcaption> -->
             </figure> 
-            Now you know why it is called webbing. You will see this kind of webbing on our display board. Kindly have a look through it and share your valuable inputs that can be incorporated into our planning.</p>
+            <p>Now you know why it is called webbing. You will see this kind of webbing on our display board. Kindly have a look through it and share your valuable inputs that can be incorporated into our planning.</p>
         </section>
 
         <div class="references">
